rework parameters